--- a/rrs-lib/Cargo.toml
+++ b/rrs-lib/Cargo.toml
@@ -3,6 +3,12 @@ name = "rrs-lib"
 version = "0.1.0"
 authors = ["Greg Chadwick <gac@lowrisc.org>"]
 edition = "2018"
+license = "Apache-2.0"
+keywords = ["riscv", "risc-v", "simulator", "emulator"]
+categories = ["emulators"]
+description = "A library for building RISC-V instruction set simulators"
+homepage = "https://gregchadwick.co.uk/blog/building-rrs-pt1/"
+repository = "https://github.com/GregAC/rrs/tree/main/rrs-lib"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
