--- a/rrs-cli/Cargo.toml
+++ b/rrs-cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rrs-cli"
 version = "0.1.0"
-authors = ["Greg Chadwick <gac@lowrisc.org>"]
+authors = ["Greg Chadwick <mail@gregchadwick.co.uk>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
