--- a/rrs-lib/Cargo.toml
+++ b/rrs-lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rrs-lib"
 version = "0.1.0"
-authors = ["Greg Chadwick <gac@lowrisc.org>"]
+authors = ["Greg Chadwick <mail@gregchadwick.co.uk>"]
 edition = "2018"
 license = "Apache-2.0"
 keywords = ["riscv", "risc-v", "simulator", "emulator"]
